# near-smart-contracts

./: .env  .env.local  .gitignore  README.md  compile.sh  near.config.js  package-lock.json  package.json
assets/: token_metadata.json
assets/environments/: contract_meta_data.json  test_token_metadata.json
assets/function/: init_metaverse.json  mint_rock.json  new.json
assets/rocks/: contract_meta_data.json  test_token_metadata.json
assets/rocksNFTCollectionHolder/: contract_meta_data.json  test_token_metadata.json
contracts/environments/: Cargo.toml
contracts/goods/rockNFTCollectionHolder/: Cargo.toml  build.sh
contracts/goods/rockNFTCollectionHolder/src/: events.rs  lib.rs
migrations/: config.sh  get-operator.sh  init.sh  mint.sh  user-mint.sh
migrations/environmentsNFT/: 1.0_createaccount.ts  1.0_createaccountcontract.ts  1.0_deleteaccount.ts  1.0_deleteaccountcontract.ts  1.1_deploy.ts  1.1_upgrade.ts  1.2_create-nft.ts  1.2_createNFT.ts  1.3_user-mint.ts  2.0_get-admin.ts  2.1_get-operator.ts  2.2_get-treasury.ts  2.3_get-token-price.ts  2.4_get-current-supply.ts  2.5_get-max-supply.ts  3.0_set-admin.ts  3.1_set-operator.ts  3.2_set-treasury.ts  3.3_update-token-metadata.ts  3.4_update-token-price.ts  3.5_update-minted-token-metadata.ts  3.6_update-contract-metadata.ts  3.7_update-royalties.ts  environmentNFT.ts
migrations/rockNFT/: 1.0_createaccountcontract.ts  1.0_deleteaccountcontract.ts  1.1_deploy.ts  1.1_upgrade.ts  (+6 more)
scripts/: compile.clear.sh  compile.sh  config.sh  deploy.sh  get-admin.sh  mint.sh  update-operator.sh
tests/: config.js
(+22 files in other folders)
