[package]
name = "rockNFTCollection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.0.0-pre.7"
near-contract-standards = "4.0.0-pre.7"
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]
